--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,10 +15,12 @@
 @import "components/story";
 @import "components/bg-video";
 @import "components/form";
+@import "components/popup";
 
 @import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
+@import "layout/navigation";
 
 @import "pages/home";
 
