--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -4,11 +4,16 @@
 
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;  
+
+        @include respond(tab-port) {
+            margin-bottom: $gutter-vertical-small;
+        }
     }
 
-    // &:last-child {
-    //     margin-bottom: 0;
-    // }
+    @include respond(tab-port) {
+        max-width: 50rem;
+        padding: 0 3rem;
+    }
 
     @include clearfix;
 
@@ -17,6 +22,15 @@
 
         &:not(:last-child) {
             margin-right: $gutter_horizontal;
+
+            @include respond(tab-port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
+
+        @include respond(tab-port) {
+            width: 100% !important;
         }
     }
 
