--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -33,6 +33,8 @@
             display: inline-block;
             transition: all .2s;
             line-height: 1;
+
+            
         }
         &:hover {
             color: $color-primary;
@@ -52,11 +54,31 @@
         opacity: 0;
         transform: translate(-50%, -50%) scale(.25);
         transition: all .4s .2s;
+
+        @include respond(tab-land) {
+            width: 95%;
+        }
+
+        @include respond(phone) {
+            width: 85%;
+        }
     }
 
     &__left {
         width: 33.333333%;
         display: table-cell;
+
+        @include respond(tab-port) {
+            width: 100%;
+            display: inline-block;
+            position: relative;
+            padding: 0;
+        }
+
+        @include respond(phone) {
+            height: 0;
+            display: none;
+        }
     }
 
     &__right {
@@ -64,11 +86,30 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+
+        @include respond(tab-port) {
+            width: 100%;
+            display: inline-block;
+            position: relative;
+            text-align: center;
+        }
     }
 
     &__img {
         display: block;
         width: 100%;
+
+        @include respond(tab-port) {
+            width: 49.5%;
+            padding: 0;
+            margin: 0;
+            display: inline-block;
+        }
+
+        @include respond(phone) {
+            display: none;
+        }
+
     }
 
     &__text {
