--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -16,16 +16,20 @@
 
 // MEDIA QUERY MANAGER
 
-/*
-0 - 600px:   Phone
-600 - 900px:   Tablet portrait
-900 - 1200px:   Tablet landscape
-[0 - 600px]:    is where our normal styles apply
-1800px :        Big desktop
+// 0 - 600px:   Phone
+// 600 - 900px:   Tablet portrait
+// 900 - 1200px:   Tablet landscape
+// [0 - 600px]:    is where our normal styles apply
+// 1800px :        Big desktop
 
-ORDER: Base + typography > general layout + grid > page layout > components
+// 320px: For mobile devices with small screens like smartphones.
+// 480px: For larger mobile devices or small tablets.
+// 768px: For tablets or small laptops in portrait mode.
+// 992px: For laptops or desktops in landscape mode.
+// 1200px: For larger screens like desktops and laptops.
 
-*/
+// ORDER: Base + typography > general layout + grid > page layout > components
+
 
 
 @mixin respond($breakpoint) {
@@ -42,3 +46,4 @@ ORDER: Base + typography > general layout + grid > page layout > components
         @media (min-width: 112.5em) { @content };    //1800px
     }
 }
+
